# aac-model-testing

./: .gitignore  README.md  generate_summary_xlsx.py  init.bat  init.ps1  init.sh  main.py  model_test.py  pyproject.toml  view_results.py
results/: all_results.jsonl  analysis_20250625_182313.json  analysis_20250625_182416.json  analysis_20250625_182523.json  analysis_20250625_182949.json  analysis_20250625_183139.json  analysis_20250625_183500.json  analysis_20250625_183740.json  raw_results_20250625_182313.json  raw_results_20250625_182416.json  raw_results_20250625_182523.json  raw_results_20250625_182949.json  raw_results_20250625_183139.json  raw_results_20250625_183500.json  raw_results_20250625_183740.json
src/: __init__.py  aac_testing_framework.py  model_manager.py  performance_monitor.py  results_analyzer.py  schemas.py
src/test_cases/: __init__.py  base_test.py  phraseboard_test.py  text_correction_test.py  utterance_suggestion_test.py
